src/css/ipaylinks.css
@charset "utf-8";
/*!
 *  ipaylinks@v1.0.0 by @denmark
 *  License - (Font: SIL OFL 1.1, CSS: MIT License)
 */
@font-face{
    font-family:'SourceHanSansCN';
    src:url(../fonts/SourceHanSansCN-Light.otf);
    src:url(../fonts/SourceHanSansCN-ExtraLight.otf);
    src:url(../fonts/SourceHanSansCN-Normal.otf)
}
body{
    font-family: '思源黑体 CN Light', '思源黑体 CN', "SourceHanSansCN";
}
.loginreg-font{
    font-family: '微软雅黑 Regular', '微软雅黑';
}
.color-white{
    color: #FFFFFF;
}
.bgcolor-white{
    background-color: #FFFFFF;
}
.ipay-color-a{
    color: #333333;
}
.ipay-color-b{
    color: #0070BA;
}
.ipay-color-c{
    color: #E4E4E4;
}
.ipay-bgcolor-a{
    background-color: #333333;
}
.ipay-bgcolor-b{
    background-color: #0070BA;
}
.ipay-bgcolor-c{
    background-color: #E4E4E4;
}
.header{
    padding: 0px;
    margin: 0px;
    height: auto;
    font-size: 13px;
    background: #ffffff;
    border-bottom: 1px solid rgba(182,182,182,.3);
}
.header.status-2{
    background: #0070BA;
}

.header-top{
    border-top: 5px solid #0070BA;
}
.navbar-toggle {
    background-color: #eee;
    border: 1px solid #ccc;
}
.navbar-toggle .icon-bar {
    background-color: #0070BA;
}
.nav>li>a{
    color: #000000;
    width: auto;
    margin: auto 15px;
    padding-left: 0px;
    padding-right: 0px;
}
.nav.status-2>li>a{
    color: #FFFFFF;
}
.nav>li>a:focus,
.nav>li>a:hover,
.nav>li.active>a{
    background: #ffffff;
    color: #0077AB;
}

.nav.status-2>li>a:focus,
.nav.status-2>li>a:hover,
.nav.status-2>li.active>a{
    background: #0070BA;
    color: #CCCCCC;
}

.nav>li.login-first-reg{
    font-size: 14px;
}
.nav>li.login-first-reg>span{
    display: inline-block;
}
.nav>li.login-first-reg>a{
    display: inline-block;
    margin: auto 0px;
}
.nav>li.login-first-reg>a{
    color: #0070BA;
}

.ipay-pull-right{
    float: none;
}
@media screen and (min-width:768px) {
    .ipay-pull-right {
        float: right;
    }
}


/*footer样式定义*/
footer.panel-footer{
    background-color: #FFFFFF;
    font-family: '思源黑体 CN ExtraLight', '思源黑体 CN';
}
.foot-nav{
    height: auto;
    font-size: 13px;
    color: #333333;
    line-height: 25px;
    margin-top: 5px;
}
.foot-nav>li{
    padding-left: 0px;
    padding-right: 0px;
}
.foot-nav>li>a {
    color: #333333;
    width: auto;
    margin: auto 0px;
    padding-left: 0px;
    padding-right: 0px;
    /*text-decoration: none;*/
}
.foot-nav>li>a:hover{
    background: #ffffff;
    color: #0070BA;
}
@media screen and (min-width:520px) and (max-width:767px) {
    .foot-nav>li>a {
        color: #333333;
        width: auto;
        margin: auto 16px;
        padding-left: 0px;
        padding-right: 0px;
        /*text-decoration: none;*/
    }
    .foot-nav>li>a:hover{
        background: #ffffff;
        color: #0070BA;
    }
}
@media screen and (min-width:768px) {
    .foot-nav>li>a {
        color: #333333;
        width: auto;
        margin: auto 20px;
        padding-left: 0px;
        padding-right: 0px;
        /*text-decoration: none;*/
    }
    .foot-nav>li>a:hover{
        background: #ffffff;
        color: #0070BA;
    }
}

footer.panel-footer.status-2{
    background-color: #0070BA;
    color: #FFFFFF;
}
.foot-nav.status-2{
    color: #FFFFFF;
}
.foot-nav.status-2>li>a {
    color: #FFFFFF;
}
.foot-nav.status-2>li>a:hover{
    background: #0070BA;
    color: orange;
}
@media screen and (min-width:520px) and (max-width:767px) {
    .foot-nav.status-2>li>a {
        color: #FFFFFF;
        width: auto;
        margin: auto 20px;
        padding-left: 0px;
        padding-right: 0px;

    }
    .foot-nav.status-2>li>a:hover{
        background: #0070BA;
        color: orange;
    }
}
@media screen and (min-width:768px) {
    .foot-nav.status-2>li>a {
        color: #FFFFFF;
        width: auto;
        margin: auto 22px;
        padding-left: 0px;
        padding-right: 0px;

    }
    .foot-nav.status-2>li>a:hover{
        background: #0070BA;
        color: orange;
    }
}

.main-content{
    position: relative;
    top: 50px;
    left: 0px;
    margin-bottom: 50px;
    text-align: center;
}


/*index.html*/
.ipay-bg-business{
    min-height: 710px;
    padding: 60px 0 35px;
    margin-bottom: 0;
    background-image: url("../images/bg_business.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
}
.ipay-h1{
    margin-top: 115px;
    font-family: '思源黑体 CN Light', '思源黑体 CN';
    font-weight: 300;
    font-style: normal;
    font-size: 32px;
    color: #0070BA;
}
@media screen and (min-width:768px) {
    .ipay-h1 {
        font-size: 36px;
    }
}
@media screen and (min-width:992px) {
    .ipay-h1 {
        font-size: 42px;
    }
}
.ipay-btn{
    cursor: pointer;
    margin: 60px auto;
    width: 159px;
    height: 40px;
    line-height: 40px;
    border-radius: 5px;
    font-size: 13px;
    font-weight: 300;
}
.ipay-pci{
    width: 284px;
    text-align: left;
    font-size: 12px;
}
@media screen and (max-width:520px) {
    .ipay-pci {
        margin: 0px auto;
    }
}
.ipay-pci-img{
    width: 284px;
    height: auto;
}
.ipay-about-btn{
    display: block;
    color: #FFFFFF;
}

.ipay-about-btn:hover{
    color: #FFFFFF;
    text-decoration: none;
}

/*描述点的样式定义*/
.ipay-desc{
    font-family: '思源黑体 CN Light', '思源黑体 CN';
    font-weight: 300;
    font-style: normal;
    font-size: 14px;
    padding: 35px 10px;
}
.ipay-desc>div.row{
    line-height: 26px;
}
.ipay-desc>div.row>div{
    padding: 0 40px;
    border-left: 1px solid #cccccc;
}
.ipay-desc>div.row>div:first-child{
    padding-left: 0px;
    border: none;
}
@media screen and (max-width:767px) {
    .ipay-desc>div.row>div{
        padding-left: 0px;
        border: none;
        border-top: 1px solid #cccccc;
        margin-top: 30px;
        padding-top: 30px;
        text-align: center;
    }
    .ipay-desc>div.row>div:first-child{
        border: none;
        margin-top: 0px;
        padding-top: 0px;
    }
}
/* ... */

